--- a/tmux/local.tmux.conf
+++ b/tmux/local.tmux.conf
@@ -2,20 +2,25 @@
 # Set a shorter delay for easier commands
 set-option -g escape-time 10
 
-# Reload configuration
-bind r source-file $HOME/.tmux.conf \; display-message "Config reloaded!"
+set-option -g default-shell /bin/zsh
 
 # Customize status bar
-set-option -g status-bg black
-set-option -g status-fg white
+# set-option -g status-bg black
+# set-option -g status-fg white
 set-option -g status-left "#[fg=green]#h:#F #[default]"
 set-option -g status-right "#[fg=yellow]%H:%M #[fg=cyan]%d-%b-%y"
+
+set-option -g history-limit 20000
+set-option -g set-clipboard on
 
 # Split window shortcuts
 bind-key | split-window -h
 bind-key - split-window -v
 unbind-key '"'
 unbind-key %
+
+# Reload configuration
+bind-key r source-file $HOME/.tmux.conf \; display-message "Config reloaded!"
 
 # Switch pane shortcuts
 bind-key h select-pane -L
@@ -25,11 +30,8 @@ bind-key l select-pane -R
 
 setw -g mode-keys vi
 # set -g mouse on
-bind -T copy-mode-vi Space send -X begin-selection
-bind -T copy-mode-vi Enter send -X copy-selection-and-cancel
-
-set-option -g history-limit 20000
-set-option -g set-clipboard on
+bind-key -T copy-mode-vi Space send -X begin-selection
+bind-key -T copy-mode-vi Enter send -X copy-selection-and-cancel
 
 bind-key L last-window
 
