--- a/tmux/remote.tmux.conf
+++ b/tmux/remote.tmux.conf
@@ -1,25 +1,27 @@
-unbind C-b
+unbind-key C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-
 
 # Set a shorter delay for easier commands
 set-option -g escape-time 10
 
-# Reload configuration
-bind r source-file $HOME/.tmux.conf \; display-message "Config reloaded!"
-
 # Customize status bar
-set-option -g status-bg black
-set-option -g status-fg white
+# set-option -g status-bg black
+# set-option -g status-fg white
 set-option -g status-left "#[fg=green]#H #[default]"
 set-option -g status-right "#[fg=yellow]%H:%M #[fg=cyan]%d-%b-%y"
+
+set-option -g history-limit 20000
+set-option -g set-clipboard on
 
 # Split window shortcuts
 bind-key | split-window -h
 bind-key - split-window -v
 unbind-key '"'
 unbind-key %
+
+# Reload configuration
+bind-key r source-file $HOME/.tmux.conf \; display-message "Config reloaded!"
 
 # Switch pane shortcuts
 bind-key h select-pane -L
@@ -29,11 +31,8 @@ bind-key l select-pane -R
 
 setw -g mode-keys vi
 # set -g mouse on
-bind -T copy-mode-vi Space send -X begin-selection
-bind -T copy-mode-vi Enter send -X copy-selection-and-cancel
-
-set-option -g history-limit 20000
-set-option -g set-clipboard on
+bind-key -T copy-mode-vi Space send -X begin-selection
+bind-key -T copy-mode-vi Enter send -X copy-selection-and-cancel
 
 bind-key L last-window
 
