tmux: fix status bar colours

--- a/tmux/local.tmux.conf
+++ b/tmux/local.tmux.conf
@@ -7,8 +7,8 @@ set-option -g default-shell /bin/zsh
 # Customize status bar
 # set-option -g status-bg black
 # set-option -g status-fg white
-set-option -g status-left "#[fg=green]#h:#F #[default]"
-set-option -g status-right "#[fg=yellow]%H:%M #[fg=cyan]%d-%b-%y"
+set-option -g status-left "#[fg=colour88]#h:#F #[default]"
+set-option -g status-right "#[fg=yellow]%H:%M #[fg=colour57]%d-%b-%y"
 
 set-option -g history-limit 20000
 set-option -g set-clipboard on
