--- a/tmux/remote.tmux.conf
+++ b/tmux/remote.tmux.conf
@@ -8,8 +8,8 @@ set-option -g escape-time 10
 # Customize status bar
 # set-option -g status-bg black
 # set-option -g status-fg white
-set-option -g status-left "#[fg=green]#H #[default]"
-set-option -g status-right "#[fg=yellow]%H:%M #[fg=cyan]%d-%b-%y"
+set-option -g status-left "#[fg=grey]#H #[default]"
+set-option -g status-right "#[fg=yellow]%H:%M #[fg=red]%d-%b-%y"
 
 set-option -g history-limit 20000
 set-option -g set-clipboard on
