tmux: fix status bar colours once again

--- a/tmux/remote.tmux.conf
+++ b/tmux/remote.tmux.conf
@@ -6,10 +6,10 @@ bind-key C-a send-prefix
 set-option -g escape-time 10
 
 # Customize status bar
-# set-option -g status-bg black
-# set-option -g status-fg white
-set-option -g status-left "#[fg=grey]#H #[default]"
-set-option -g status-right "#[fg=yellow]%H:%M #[fg=red]%d-%b-%y"
+set-option -g status-bg black
+set-option -g status-fg colour22
+set-option -g status-left "#[fg=colour88]#H #[default]"
+set-option -g status-right "#[fg=yellow]%H:%M #[fg=colour23]%d-%b-%y"
 
 set-option -g history-limit 20000
 set-option -g set-clipboard on
