--- a/tmux/local.tmux.conf
+++ b/tmux/local.tmux.conf
@@ -5,9 +5,9 @@ set-option -g escape-time 10
 set-option -g default-shell /bin/zsh
 
 # Customize status bar
-# set-option -g status-bg black
-# set-option -g status-fg white
-set-option -g status-left "#[fg=colour88]#h:#F #[default]"
+set-option -g status-bg black
+set-option -g status-fg colour19
+set-option -g status-left "#[fg=colour52]#h:#F #[default]"
 set-option -g status-right "#[fg=yellow]%H:%M #[fg=colour57]%d-%b-%y"
 
 set-option -g history-limit 20000
