tmux: set default terminal

--- a/tmux/local.tmux.conf
+++ b/tmux/local.tmux.conf
@@ -13,6 +13,8 @@ set-option -g status-right "#[fg=yellow]%H:%M #[fg=colour57]%d-%b-%y"
 set-option -g history-limit 20000
 set-option -g set-clipboard on
 
+set -g default-terminal "tmux-256color"
+
 # Split window shortcuts
 bind-key | split-window -h
 bind-key - split-window -v
