--- a/tmux/remote.tmux.conf
+++ b/tmux/remote.tmux.conf
@@ -14,6 +14,8 @@ set-option -g status-right "#[fg=yellow]%H:%M #[fg=colour23]%d-%b-%y"
 set-option -g history-limit 20000
 set-option -g set-clipboard on
 
+set -g default-terminal "tmux-256color"
+
 # Split window shortcuts
 bind-key | split-window -h
 bind-key - split-window -v
