--- a/tmux/remote.tmux.conf
+++ b/tmux/remote.tmux.conf
@@ -2,39 +2,17 @@ unbind-key C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# Set a shorter delay for easier commands
-set-option -g escape-time 10
+# # Customize status bar
+# set-option -g status-bg black
+# set-option -g status-fg colour22
+# set-option -g status-left "#[fg=colour88]#H #[default]"
+# set-option -g status-right "#[fg=yellow]%H:%M #[fg=colour23]%d-%b-%y"
 
-# Customize status bar
-set-option -g status-bg black
-set-option -g status-fg colour22
-set-option -g status-left "#[fg=colour88]#H #[default]"
-set-option -g status-right "#[fg=yellow]%H:%M #[fg=colour23]%d-%b-%y"
+session_fg=colour88
+status_fg=colour22
+date_fg=yellow
+cpu_fg=colour23
+status_bg=black
 
-set-option -g history-limit 20000
-set-option -g set-clipboard on
-
-set -g default-terminal "tmux-256color"
-
-# Split window shortcuts
-bind-key | split-window -h
-bind-key - split-window -v
-unbind-key '"'
-unbind-key %
-
-# Reload configuration
-bind-key r source-file $HOME/.tmux.conf \; display-message "Config reloaded!"
-
-# Switch pane shortcuts
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-
-setw -g mode-keys vi
-# set -g mouse on
-bind-key -T copy-mode-vi Space send -X begin-selection
-bind-key -T copy-mode-vi Enter send -X copy-selection-and-cancel
-
-bind-key L last-window
+source-file ~/.config/tmux/common.tmux.conf
 
