tmux: fix remote config

--- a/tmux/remote.tmux.conf
+++ b/tmux/remote.tmux.conf
@@ -2,17 +2,13 @@ unbind-key C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# # Customize status bar
-# set-option -g status-bg black
-# set-option -g status-fg colour22
-# set-option -g status-left "#[fg=colour88]#H #[default]"
-# set-option -g status-right "#[fg=yellow]%H:%M #[fg=colour23]%d-%b-%y"
-
 session_fg=colour88
 status_fg=colour22
 date_fg=yellow
 cpu_fg=colour23
 status_bg=black
+
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins"
 
 source-file ~/.config/tmux/common.tmux.conf
 
