tmux: fix host icon

--- a/tmux/common.tmux.conf
+++ b/tmux/common.tmux.conf
@@ -12,7 +12,7 @@ set -g status-right-length 200  # default: 10
 set-option -g status-bg ${status_bg}
 set-option -g status-fg ${status_fg}
 
-set -g status-left "#[fg=${session_fg},bold] 🖥 #H-> #S"
+set -g status-left "#[fg=${session_fg},bold]  #H-> #S"
 set-option -g status-right "#[fg=${date_fg}]%H:%M|%d-%b #[fg=${cpu_fg}] #{cpu -i 3} |  #{mem}"
 set -g window-status-current-format " #I:#W"
 set -g window-status-format "#I:#W#{?window_last_flag,⇽,}"
