tmux: enable focus-event (for nvim)

--- a/tmux/common.tmux.conf
+++ b/tmux/common.tmux.conf
@@ -5,6 +5,8 @@ set-option -g escape-time 10
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc" # Override to enable true-color for compatible terminals
 
+set-option -g focus-events on
+
 # Customize status bar
 
 set -g status-left-length 200   # default: 10
