--- a/ghostty/config
+++ b/ghostty/config
@@ -49,7 +49,8 @@ font-family-italic = "Google Sans Code Italic"
 theme="Banana Blueberry"
 
 background-blur-radius = 20
-# background-opacity = 0.7
+background-opacity = 0.8
+
 mouse-hide-while-typing = true
 window-decoration = true
 
