tmux: re-style tmux a bit
 - make status bar transparent
 - change local session list color

--- a/tmux/common.tmux.conf
+++ b/tmux/common.tmux.conf
@@ -11,7 +11,11 @@ set-option -g focus-events on
 
 set -g status-left-length 200   # default: 10
 set -g status-right-length 200  # default: 10
-set-option -g status-bg ${status_bg}
+# set-option -g status-bg ${status_bg}
+
+set -g status-bg default
+set -g status-style 'bg=default,fg=default'
+
 set-option -g status-fg ${status_fg}
 
 set -g status-left "#[fg=${session_fg},bold]  #H-> #S"
