tmux: set fix terminal color scheme

--- a/tmux/common.tmux.conf
+++ b/tmux/common.tmux.conf
@@ -3,7 +3,7 @@
 set-option -g escape-time 10
 
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*256col*:Tc" # Override to enable true-color for compatible terminals
+set -ga terminal-overrides ",*:RGB"
 
 set-option -g focus-events on
 
